--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -7,11 +7,13 @@
     font-size: 15px;
     background-color: #000;
     color: #FFF;
-    text-transform: upprcase;
+    text-transform: uppercase;
     font-family: 'Open Sans Condensed';
     font-weight: bolder;
     border: none;
     cursor: pointer;
+    // display: flex;
+    justify-content: center;
 
 
     &:hover {
@@ -27,6 +29,18 @@
 
         &:hover {
             background-color: #357AE8;
+            border: none;
+        }
+    }
+
+    &.inverted {
+        background-color: #fff;
+        color: #000;
+        border: 1px solid #000;
+
+        &:hover {
+            background-color: #000;
+            color: #FFF;
             border: none;
         }
     }
