--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -16,6 +16,7 @@
         display: flex;
         flex-direction: column;
         overflow: scroll;
+        margin-bottom: 10px; // added 
     }
 
     .button {
